// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders empty user list 1`] = `
<div>
  <div
    class="App"
  >
    <header
      class="App-header"
    >
      <ul />
    </header>
  </div>
</div>
`;

exports[`renders user list 1`] = `
<div>
  <div
    class="App"
  >
    <header
      class="App-header"
    >
      <ul>
        <li>
          Ralph Avalon
           - 
          13
           - 
          Rio de Janeiro
        </li>
      </ul>
    </header>
  </div>
</div>
`;
